<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textview_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
    <ImageView
        android:id="@+id/imageview_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_github_black_24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>
    <TextView
        android:id="@+id/last_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_toolbar"
        android:layout_marginTop="4dp"
        android:text="@string/last_updated_on"
        android:textSize="12sp" />
    <TextView
        android:id="@+id/text_view_last_updated_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_updated"
        android:layout_marginTop="2dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/green"/>
    <TextView
        android:id="@+id/text_view_last_updated_ago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_below="@+id/text_view_last_updated_time" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:text="@string/confirmed"/>
                <TextView
                    android:id="@+id/textview_delta_confirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/red"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                <TextView
                    android:id="@+id/textview_confirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="26sp"
                    android:textColor="@color/red"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:text="@string/active"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    android:text="@string/dash"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                <TextView
                    android:id="@+id/textview_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="26sp"
                    android:textColor="@color/blue"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:text="@string/recovered"/>
                <TextView
                    android:id="@+id/textview_delta_recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/green"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                <TextView
                    android:id="@+id/textview_recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="26sp"
                    android:textColor="@color/green"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/gray"
                    android:textStyle="bold"
                    android:text="@string/deceased"/>
                <TextView
                    android:id="@+id/textview_delta_deceased"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                <TextView
                    android:id="@+id/textview_deceased"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="26sp"
                    android:textColor="@color/gray"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>